Add more template changes

--- a/CandidateCollector/Resume_Collect/templates/Resume_Collect/navbar.html
+++ b/CandidateCollector/Resume_Collect/templates/Resume_Collect/navbar.html
@@ -1,9 +1,12 @@
 {% load static %}
+
 <nav class="navbar navbar-dark navbar-custom justify-content-between">
     <a class="navbar-brand"><img id='logo' src="{% static 'images/logo.png' %}"></a>
+    <div id="username">| Username |</div>
     <div id="logdiv">
+        <!-- Limit the number of characters that can be used for usernames to 21 or less-->
         <form id='form' class="form-inline">
-            <button id='log' class="btn btn-outline-success btn-lg my-2 my-sm-0" type="submit">Log Out</button>
+            <div><button id='log' class="btn btn-outline-success btn-lg my-2 my-sm-0" type="submit">Log Out</button></div>
         </form>
     </div>
   </nav>
