--- a/CandidateCollector/Resume_Collect/static/css/navbar.css
+++ b/CandidateCollector/Resume_Collect/static/css/navbar.css
@@ -1,6 +1,3 @@
-body {
-    background-color: rgb(176, 218, 255);
-}
 #logo {
     height: 10vh;
     width: 25vh;
@@ -12,12 +9,18 @@ body {
 div.navbar {
     border-radius: 8%;
     margin-left: 0;
+    max-width: 100%;
 }
 
 .navbar {
-    flex-wrap: nowrap;
     white-space: nowrap;
-    overflow-x: auto;
+    flex-wrap: nowrap;
+    overflow-x: scroll;
+    box-shadow: rgba(0, 0, 0, 0.5) 0px 10px 15px;
+}
+
+a.navbar-brand {
+    margin-right: 0;
 }
 
 .navbar-custom {
@@ -29,13 +32,14 @@ div.navbar {
 .navbar-custom .btn-outline-success {
     color: #FFF;
     border-color: #ffde59;
+    border-width: 3px;;
     height: 5vh;
     width: 12.5vh;
     min-width: 105px;
     min-height: 50px;
-    font-size: 5vh;
-
+    font-size: max(2vh, 21px);
 }
+/* Another comment */
 
 .navbar-custom .btn-outline-success:hover {
     background-color: #ffde59;
@@ -58,13 +62,24 @@ div.navbar {
 
 #logdiv {
     display: flex;
-    height: 100px;
-    width: 250px;
-    justify-content: center;
+    height: 10vh;
+    width: 25vh;
+    min-height: 100px;
+    min-width: 250px;
+    border-radius: 5%;
+    justify-content: space-evenly;
     align-items: center;
-    padding: 100px;
-    flex-grow: 4;
+
 }
+
+#username {
+    color: #fff;
+
+    margin-right: 50px;
+    margin-left: 50px;
+    font-size: max(2vh, 21px);
+}
+
 
 /*<!--rgb(254, 255, 134) yellow
 rgb(176, 218, 255) sky blue
