--- a/CandidateCollector/Resume_Collect/templates/Resume_Collect/Collection.html
+++ b/CandidateCollector/Resume_Collect/templates/Resume_Collect/Collection.html
@@ -3,37 +3,24 @@
 <html>
     <head>
         <title>Candidate Collector</title>
-        <link rel="stylesheet" type="text/css" href="{% static '/css/main.css' %}">
+        <link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.ico' %}"/>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        <link rel="stylesheet" type="text/css" href="{% static '/css/navbar.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static '/css/table.css' %}">
     </head>
     <body>
-        {% include 'Resume_Collect/navbar.html' %}
-        <div class="container">
-            <!-- Card container -->
-                <div class="container mt-5">
-                    <div class="row">
-                    <!-- Add your cards here -->
-                    <div class="col-md-4">
-                        <div class="card">
-                        <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                            <a href="" class="btn btn-primary">Go somewhere</a>
-                        </div>
-                        </div>
-                    </div>
+        <header>
+            {% include 'Resume_Collect/navbar.html' %}
+        </header>
+        <main>
+        {% include 'Resume_Collect/table.html' %}
 
-                    <!-- Add more cards as needed -->
-                    </div>
-                </div>
-                    
-        </div>
     
-        <!-- Bootstrap JS -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-pbGJv4N4fFnsKl8bI+TJv+H+LvlbOoJ0m3qxTVC+6ml+zT6+1X6B1D6bRv6wpsmK0sQ+3y3ePz6TjIV6T1U6jg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.3/umd/popper.min.js" integrity="sha512-fInSmo8OywoKUTzD0h/AsF9zO8G52eCxKQgb5rBf5c5bAXjKkRvRdr7aGAn0c9VjWdFoyCvV7O08MCKm0"></script>
+        </main>
     </body>
+    <!-- Bootstrap JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-pbGJv4N4fFnsKl8bI+TJv+H+LvlbOoJ0m3qxTVC+6ml+zT6+1X6B1D6bRv6wpsmK0sQ+3y3ePz6TjIV6T1U6jg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.3/umd/popper.min.js" integrity="sha512-fInSmo8OywoKUTzD0h/AsF9zO8G52eCxKQgb5rBf5c5bAXjKkRvRdr7aGAn0c9VjWdFoyCvV7O08MCKm0"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
