--- a/CandidateCollector/Resume_Collect/templates/Resume_Collect/LogIn.html
+++ b/CandidateCollector/Resume_Collect/templates/Resume_Collect/LogIn.html
@@ -3,9 +3,10 @@
 <html>
     <head>
         <title>Candidate Collector</title>
-        <link rel="stylesheet" type="text/css" href="{% static '/css/main.css' %}">
+        <link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.ico' %}"/>
+        <link rel="stylesheet" type="text/css" href="{% static '/css/navbar.css' %}">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-        <style> #log { visibility: hidden;}</style>
+        <style> #log { visibility: hidden;} #username {visibility: hidden;}</style>
     </head>
     <body>
         {% include 'Resume_Collect/navbar.html' %}
