--- a/CandidateCollector/Resume_Collect/templates/Resume_Collect/table.html
+++ b/CandidateCollector/Resume_Collect/templates/Resume_Collect/table.html
@@ -39,6 +39,51 @@
             <td>1+ years</td>
             <td>icon</td>
         </tr>
+        <tr>
+            <th scope="row">1</th>
+            <td>Mike Wazowski</td>
+            <td>m.wazowski@monstersInc.com</td>
+            <td>787-455-4567</td>
+            <td>Certificate</td>
+            <td>4+ years</td>
+            <td>icon</td>
+        </tr>
+        <tr>
+            <th scope="row">1</th>
+            <td>Mike Wazowski</td>
+            <td>m.wazowski@monstersInc.com</td>
+            <td>787-455-4567</td>
+            <td>Certificate</td>
+            <td>4+ years</td>
+            <td>icon</td>
+        </tr>
+        <tr>
+            <th scope="row">1</th>
+            <td>Mike Wazowski</td>
+            <td>m.wazowski@monstersInc.com</td>
+            <td>787-455-4567</td>
+            <td>Certificate</td>
+            <td>4+ years</td>
+            <td>icon</td>
+        </tr>
+        <tr>
+            <th scope="row">1</th>
+            <td>Mike Wazowski</td>
+            <td>m.wazowski@monstersInc.com</td>
+            <td>787-455-4567</td>
+            <td>Certificate</td>
+            <td>4+ years</td>
+            <td>icon</td>
+        </tr>
+        <tr>
+            <th scope="row">1</th>
+            <td>Mike Wazowski</td>
+            <td>m.wazowski@monstersInc.com</td>
+            <td>787-455-4567</td>
+            <td>Certificate</td>
+            <td>4+ years</td>
+            <td>icon</td>
+        </tr>
         </tbody>
     </table>
   </div>
