--- a/CandidateCollector/Resume_Collect/static/css/navbar.css
+++ b/CandidateCollector/Resume_Collect/static/css/navbar.css
@@ -1,3 +1,7 @@
+
+header {
+    height: 22vh;
+}
 #logo {
     height: 10vh;
     width: 25vh;
@@ -13,10 +17,15 @@ div.navbar {
 }
 
 .navbar {
+    position: fixed;
     white-space: nowrap;
     flex-wrap: nowrap;
     overflow-x: scroll;
-    box-shadow: rgba(0, 0, 0, 0.5) 0px 10px 15px;
+    z-index: 5;
+    box-shadow: rgba(0, 0, 0, 0.5) 0px 10px 25px 10px;
+    position: fixed; /* Set the navbar to fixed position */
+    top: 0; /* Position the navbar at the top of the page */
+    width: 100%; /* Full width */
 }
 
 a.navbar-brand {
@@ -24,7 +33,7 @@ a.navbar-brand {
 }
 
 .navbar-custom {
-    background-color: #38b6ff;
+    background: linear-gradient(270deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 0%, #38b6ff 75%);
     height: 12vh;
     min-height: 150px;
 }
@@ -77,7 +86,7 @@ a.navbar-brand {
 
     margin-right: 50px;
     margin-left: 50px;
-    font-size: max(2vh, 21px);
+    font-size: max(3vh, 28px);
 }
 
 
