--- a/CandidateCollector/Resume_Collect/templates/Resume_Collect/Collection.html
+++ b/CandidateCollector/Resume_Collect/templates/Resume_Collect/Collection.html
@@ -2,21 +2,29 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Candidate Collector</title>
+        <title>Candidate Collection</title>
         <link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.ico' %}"/>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="{% static '/css/navbar.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static '/css/workbench.css' %}">
         <link rel="stylesheet" type="text/css" href="{% static '/css/table.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static '/css/buttonGroup.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static '/css/space.css' %}">
     </head>
     <body>
         <header>
             {% include 'Resume_Collect/navbar.html' %}
         </header>
-        <main>
-        {% include 'Resume_Collect/table.html' %}
-
-    
-        </main>
+        <space></space>
+        <workbench>
+            <side>
+                {% include 'Resume_Collect/buttonGroup.html' %}
+            </side>
+            <main>
+                {% include 'Resume_Collect/table.html' %}
+            </main>
+        </workbench>
+        <footer><div></div></footer>
     </body>
     <!-- Bootstrap JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-pbGJv4N4fFnsKl8bI+TJv+H+LvlbOoJ0m3qxTVC+6ml+zT6+1X6B1D6bRv6wpsmK0sQ+3y3ePz6TjIV6T1U6jg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
