--- a/CandidateCollector/Resume_Collect/templates/Resume_Collect/Collection.html
+++ b/CandidateCollector/Resume_Collect/templates/Resume_Collect/Collection.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" type="text/css" href="{% static '/css/table.css' %}">
         <link rel="stylesheet" type="text/css" href="{% static '/css/buttonGroup.css' %}">
         <link rel="stylesheet" type="text/css" href="{% static '/css/space.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static '/css/footer.css' %}">
     </head>
     <body>
         <header>
@@ -24,8 +25,9 @@
                 {% include 'Resume_Collect/table.html' %}
             </main>
         </workbench>
-        <footer><div></div></footer>
     </body>
+    <footer>
+    </footer>
     <!-- Bootstrap JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-pbGJv4N4fFnsKl8bI+TJv+H+LvlbOoJ0m3qxTVC+6ml+zT6+1X6B1D6bRv6wpsmK0sQ+3y3ePz6TjIV6T1U6jg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.3/umd/popper.min.js" integrity="sha512-fInSmo8OywoKUTzD0h/AsF9zO8G52eCxKQgb5rBf5c5bAXjKkRvRdr7aGAn0c9VjWdFoyCvV7O08MCKm0"></script>
