--- a/CandidateCollector/Resume_Collect/templates/Resume_Collect/buttonGroup.html
+++ b/CandidateCollector/Resume_Collect/templates/Resume_Collect/buttonGroup.html
@@ -15,7 +15,7 @@
     <div class="search_btn">
         <form class="form-inline my-2 my-lg-0">
             <input id='search_input' class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            <button id="search_btn" class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
         </form>
     </div>
   </div>
