Add most recent changes

--- a/CandidateCollector/Resume_Collect/templates/Resume_Collect/table.html
+++ b/CandidateCollector/Resume_Collect/templates/Resume_Collect/table.html
@@ -1,89 +1,91 @@
-<div id="folder" class="table">
-    <table id='table' class="table table-hover">
-        <thead>
-        <tr>
-            <th scope="col">#</th>
-            <th scope="col">Name</th>
-            <th scope="col">Email</th>
-            <th scope="col">Phone</th>
-            <th scope="col">Education</th>
-            <th scope="col">Experience</th>
-            <th scope="col">Resume</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr>
-            <th scope="row">1</th>
-            <td>Mike Wazowski</td>
-            <td>m.wazowski@monstersInc.com</td>
-            <td>787-455-4567</td>
-            <td>Certificate</td>
-            <td>4+ years</td>
-            <td>icon</td>
-        </tr>
-        <tr>
-            <th scope="row">2</th>
-            <td>Rafael Vega</td>
-            <td>rvega@holbertonstudents.com</td>
-            <td>787-455-4567</td>
-            <td>Master's</td>
-            <td>None</td>
-            <td>icon</td>
-        </tr>
-        <tr>
-            <th scope="row">3</th>
-            <td>Gabriel Pagan Mateo</td>
-            <td>gabriel.pagan.mateo@gmail.com</td>
-            <td>787-455-4567</td>
-            <td>Bachelor's</td>
-            <td>1+ years</td>
-            <td>icon</td>
-        </tr>
-        <tr>
-            <th scope="row">1</th>
-            <td>Mike Wazowski</td>
-            <td>m.wazowski@monstersInc.com</td>
-            <td>787-455-4567</td>
-            <td>Certificate</td>
-            <td>4+ years</td>
-            <td>icon</td>
-        </tr>
-        <tr>
-            <th scope="row">1</th>
-            <td>Mike Wazowski</td>
-            <td>m.wazowski@monstersInc.com</td>
-            <td>787-455-4567</td>
-            <td>Certificate</td>
-            <td>4+ years</td>
-            <td>icon</td>
-        </tr>
-        <tr>
-            <th scope="row">1</th>
-            <td>Mike Wazowski</td>
-            <td>m.wazowski@monstersInc.com</td>
-            <td>787-455-4567</td>
-            <td>Certificate</td>
-            <td>4+ years</td>
-            <td>icon</td>
-        </tr>
-        <tr>
-            <th scope="row">1</th>
-            <td>Mike Wazowski</td>
-            <td>m.wazowski@monstersInc.com</td>
-            <td>787-455-4567</td>
-            <td>Certificate</td>
-            <td>4+ years</td>
-            <td>icon</td>
-        </tr>
-        <tr>
-            <th scope="row">1</th>
-            <td>Mike Wazowski</td>
-            <td>m.wazowski@monstersInc.com</td>
-            <td>787-455-4567</td>
-            <td>Certificate</td>
-            <td>4+ years</td>
-            <td>icon</td>
-        </tr>
-        </tbody>
-    </table>
+<div class="card">
+    <div id="folder" class="table">
+        <table id='table' class="table table-hover">
+            <thead>
+            <tr>
+                <th scope="col">#</th>
+                <th scope="col">Name</th>
+                <th scope="col">Email</th>
+                <th scope="col">Phone</th>
+                <th scope="col">Education</th>
+                <th scope="col">Experience</th>
+                <th scope="col">Resume</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <th scope="row">1</th>
+                <td>Mike Wazowski</td>
+                <td>m.wazowski@monstersInc.com</td>
+                <td>787-455-4567</td>
+                <td>Certificate</td>
+                <td>4+ years</td>
+                <td>icon</td>
+            </tr>
+            <tr>
+                <th scope="row">2</th>
+                <td>Rafael Vega</td>
+                <td>rvega@holbertonstudents.com</td>
+                <td>787-455-4567</td>
+                <td>Master's</td>
+                <td>None</td>
+                <td>icon</td>
+            </tr>
+            <tr>
+                <th scope="row">3</th>
+                <td>Gabriel Pagan Mateo</td>
+                <td>gabriel.pagan.mateo@gmail.com</td>
+                <td>787-455-4567</td>
+                <td>Bachelor's</td>
+                <td>1+ years</td>
+                <td>icon</td>
+            </tr>
+            <tr>
+                <th scope="row">1</th>
+                <td>Mike Wazowski</td>
+                <td>m.wazowski@monstersInc.com</td>
+                <td>787-455-4567</td>
+                <td>Certificate</td>
+                <td>4+ years</td>
+                <td>icon</td>
+            </tr>
+            <tr>
+                <th scope="row">1</th>
+                <td>Mike Wazowski</td>
+                <td>m.wazowski@monstersInc.com</td>
+                <td>787-455-4567</td>
+                <td>Certificate</td>
+                <td>4+ years</td>
+                <td>icon</td>
+            </tr>
+            <tr>
+                <th scope="row">1</th>
+                <td>Mike Wazowski</td>
+                <td>m.wazowski@monstersInc.com</td>
+                <td>787-455-4567</td>
+                <td>Certificate</td>
+                <td>4+ years</td>
+                <td>icon</td>
+            </tr>
+            <tr>
+                <th scope="row">1</th>
+                <td>Mike Wazowski</td>
+                <td>m.wazowski@monstersInc.com</td>
+                <td>787-455-4567</td>
+                <td>Certificate</td>
+                <td>4+ years</td>
+                <td>icon</td>
+            </tr>
+            <tr>
+                <th scope="row">1</th>
+                <td>Mike Wazowski</td>
+                <td>m.wazowski@monstersInc.com</td>
+                <td>787-455-4567</td>
+                <td>Certificate</td>
+                <td>4+ years</td>
+                <td>icon</td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
   </div>
