--- a/CandidateCollector/Resume_Collect/static/css/table.css
+++ b/CandidateCollector/Resume_Collect/static/css/table.css
@@ -4,6 +4,13 @@ main {
     justify-content: center;
 }
 
+.card {
+    width: min-content;
+    height: min-content;
+    background: rgb(236, 236, 236);
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+  }
+
 #folder {
     width: min-content;
     height: min-content;
