--- a/CandidateCollector/Resume_Collect/static/css/workbench.css
+++ b/CandidateCollector/Resume_Collect/static/css/workbench.css
@@ -8,10 +8,15 @@ workbench {
 side {
     position: fixed;
     left: 15%;
+    z-index: 2;
 }
 
 main {
     position: relative;
     right: 15%;
-    z-index: -4;
+    z-index: 0;
+    overflow:hidden;
+    overflow-x: scroll;
+    margin-left: 15vh;
+    min-width: 300px;
 }
