--- a/CandidateCollector/Resume_Collect/static/css/buttonGroup.css
+++ b/CandidateCollector/Resume_Collect/static/css/buttonGroup.css
@@ -15,6 +15,7 @@ side {
     gap: max(2vh, 15px);
     border-radius: 25%;
     margin: 15px;
+    align-items: center !important;
 }
 
 .btn-group-vertical button {
@@ -55,6 +56,8 @@ side {
     color: #fff;
     background-color: #ffe538;
     border-color: #fff;
+    width: max(11vh, 50px) !important;
+
 }
 
 .btn-outline-success:not(:disabled):not(.disabled).active, .btn-outline-success:not(:disabled):not(.disabled):active, .show > .btn-outline-success.dropdown-toggle {
