--- a/CandidateCollector/Resume_Collect/templates/Resume_Collect/navbar.html
+++ b/CandidateCollector/Resume_Collect/templates/Resume_Collect/navbar.html
@@ -6,7 +6,7 @@
     <div id="logdiv">
         <!-- Limit the number of characters that can be used for usernames to 21 or less-->
         <form id='form' class="form-inline">
-            <div><button id='log' class="btn btn-outline-success btn-lg my-2 my-sm-0" type="submit">Log Out</button></div>
+            <div><a href="{% url 'LogIn' %}"><button id='log' class="btn btn-outline-success btn-lg my-2 my-sm-0" type="button">Log Out</button></a></div>
         </form>
     </div>
   </nav>
