--- a/CandidateCollector/Resume_Collect/templates/Resume_Collect/table.html
+++ b/CandidateCollector/Resume_Collect/templates/Resume_Collect/table.html
@@ -1,90 +1,52 @@
+{% load static %}
 <div class="card">
     <div id="folder" class="table">
         <table id='table' class="table table-hover">
             <thead>
             <tr>
-                <th scope="col">#</th>
-                <th scope="col">Name</th>
-                <th scope="col">Email</th>
-                <th scope="col">Phone</th>
-                <th scope="col">Education</th>
-                <th scope="col">Experience</th>
-                <th scope="col">Resume</th>
+                <th scope="col" style="text-align: center;">&nbsp;&nbsp;#{{ total_candidates }}</th>
+                <th scope="col" style="text-align: center;">Name</th>
+                <th scope="col" style="text-align: center;">Email</th>
+                <th scope="col" style="text-align: center;">Phone</th>
+                <th scope="col" style="text-align: center;">Education</th>
+                <th scope="col" style="text-align: center;">Experience</th>
+                <th scope="col" style="text-align: center;">&nbsp;&nbsp;Download&nbsp;&nbsp;</th>
+                <th scope="col" style="text-align: center;">&nbsp;&nbsp;Delete&nbsp;&nbsp;</th>
             </tr>
             </thead>
             <tbody>
-            <tr>
-                <th scope="row">1</th>
-                <td>Mike Wazowski</td>
-                <td>m.wazowski@monstersInc.com</td>
-                <td>787-455-4567</td>
-                <td>Certificate</td>
-                <td>4+ years</td>
-                <td>icon</td>
-            </tr>
-            <tr>
-                <th scope="row">2</th>
-                <td>Rafael Vega</td>
-                <td>rvega@holbertonstudents.com</td>
-                <td>787-455-4567</td>
-                <td>Master's</td>
-                <td>None</td>
-                <td>icon</td>
-            </tr>
-            <tr>
-                <th scope="row">3</th>
-                <td>Gabriel Pagan Mateo</td>
-                <td>gabriel.pagan.mateo@gmail.com</td>
-                <td>787-455-4567</td>
-                <td>Bachelor's</td>
-                <td>1+ years</td>
-                <td>icon</td>
-            </tr>
-            <tr>
-                <th scope="row">1</th>
-                <td>Mike Wazowski</td>
-                <td>m.wazowski@monstersInc.com</td>
-                <td>787-455-4567</td>
-                <td>Certificate</td>
-                <td>4+ years</td>
-                <td>icon</td>
-            </tr>
-            <tr>
-                <th scope="row">1</th>
-                <td>Mike Wazowski</td>
-                <td>m.wazowski@monstersInc.com</td>
-                <td>787-455-4567</td>
-                <td>Certificate</td>
-                <td>4+ years</td>
-                <td>icon</td>
-            </tr>
-            <tr>
-                <th scope="row">1</th>
-                <td>Mike Wazowski</td>
-                <td>m.wazowski@monstersInc.com</td>
-                <td>787-455-4567</td>
-                <td>Certificate</td>
-                <td>4+ years</td>
-                <td>icon</td>
-            </tr>
-            <tr>
-                <th scope="row">1</th>
-                <td>Mike Wazowski</td>
-                <td>m.wazowski@monstersInc.com</td>
-                <td>787-455-4567</td>
-                <td>Certificate</td>
-                <td>4+ years</td>
-                <td>icon</td>
-            </tr>
-            <tr>
-                <th scope="row">1</th>
-                <td>Mike Wazowski</td>
-                <td>m.wazowski@monstersInc.com</td>
-                <td>787-455-4567</td>
-                <td>Certificate</td>
-                <td>4+ years</td>
-                <td>icon</td>
-            </tr>
+                {% for candidate in candidates %}
+                    <tr>
+                        <td>{{ forloop.counter }}</td>
+                        {% if candidate.name %}
+                        <td>{{ candidate.name }}</td>
+                    {% else %}
+                        <td style="text-decoration: line-through;">&nbsp;</td>
+                    {% endif %}
+                    {% if candidate.email %}
+                        <td>{{ candidate.email }}</td>
+                    {% else %}
+                        <td style="text-decoration: line-through;">&nbsp;</td>
+                    {% endif %}
+                    {% if candidate.phone %}
+                        <td>{{ candidate.phone }}</td>
+                    {% else %}
+                        <td style="text-decoration: line-through;">&nbsp;</td>
+                    {% endif %}
+                    {% if candidate.education %}
+                        <td>{{ candidate.education }}</td>
+                    {% else %}
+                        <td style="text-decoration: line-through;">&nbsp;</td>
+                    {% endif %}
+                    {% if candidate.experience %}
+                        <td>{{ candidate.experience }}</td>
+                    {% else %}
+                        <td style="text-decoration: line-through;">&nbsp;</td>
+                    {% endif %}
+                        <td><a class="btn btn-sm btn-info" href="{% url 'Resume' candidate.id %}" style="background-color: #38b6ff !important;"><img id='download' style="width: max(3vh, 12px);" src="{% static 'images/download.svg' %}"></a></td>
+                        <td><a class="btn btn-sm btn-danger" href=""><img id='trash' style="width: max(2.5vh, 12px);" src="{% static 'images/delete.svg' %}"></a></td>
+                    </tr>
+                {% endfor %}
             </tbody>
         </table>
     </div>
