Add most recent changes

--- a/CandidateCollector/Resume_Collect/static/css/buttonGroup.css
+++ b/CandidateCollector/Resume_Collect/static/css/buttonGroup.css
@@ -1,21 +1,25 @@
 side {
     height: fit-content;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    background: linear-gradient(315deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 0%, #38b6ff 75%);
-    box-shadow: rgba(0, 0, 0, 0.5) 25px 40px 25px;
+    /*background: linear-gradient(315deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 0%, #38b6ff 75%);*/
+    /*box-shadow: rgba(0, 0, 0, 0.5) 25px 40px 25px;*/
     border-radius: .50rem;
 }
 
 .btn-group-vertical {
     min-width: fit-content;
     min-height: 50px;
-    width: fit-content;
+    width: 100%;
     gap: max(2vh, 15px);
-    border-radius: 25%;
+    border-radius: .50rem;
     margin: 15px;
     align-items: center !important;
+    background: linear-gradient(315deg, rgba(2, 0, 36, 1) 0%, rgba(9, 9, 121, 1) 0%, #38b6ff 75%);
+    box-shadow: rgba(0, 0, 0, 0.5) 5px 15px 25px;
+
 }
 
 .btn-group-vertical button {
@@ -37,7 +41,7 @@ side {
     font-size: max(2vh, 12px);
 }
 
-.btn-group-vertical > .btn:not(:last-child):not(.dropdown-toggle) {
+.btn-group-vertical>.btn:not(:last-child):not(.dropdown-toggle) {
     border-bottom-right-radius: .3rem;
     border-bottom-left-radius: .3rem;
     border-top-left-radius: .3rem;
@@ -47,8 +51,8 @@ side {
 .btn-secondary {
     color: #fff;
     background: transparent;
-    border:3px solid #ffe538;
-  }
+    border: 3px solid #ffe538;
+}
 
 .btn-group-vertical .btn-secondary:hover {
     color: #38b6ff;
@@ -64,7 +68,9 @@ side {
 
 }
 
-.btn-outline-success:not(:disabled):not(.disabled).active, .btn-outline-success:not(:disabled):not(.disabled):active, .show > .btn-outline-success.dropdown-toggle {
+.btn-outline-success:not(:disabled):not(.disabled).active,
+.btn-outline-success:not(:disabled):not(.disabled):active,
+.show>.btn-outline-success.dropdown-toggle {
     color: #38b6ff;
     background-color: #ffe538;
     border: 2px solid #fff;
@@ -87,11 +93,11 @@ side {
     border: 3px solid #ffe538;
 }
 
-.show > .btn-secondary.dropdown-toggle {
+.show>.btn-secondary.dropdown-toggle {
     color: #38b6ff;
     background-color: #ffe538;
     border-color: #fff;
-  }
+}
 
 #btnGroupVerticalDrop1 {
     border-bottom-right-radius: .3rem;
@@ -99,9 +105,11 @@ side {
     border-top-left-radius: .3rem;
     border-top-right-radius: .3rem;
 }
+
 .search_btn {
     width: max(13vh, 97px);
 }
+
 #search_btn {
     width: max(13vh, 97px);
 }
@@ -111,4 +119,38 @@ side {
     flex-direction: column;
     align-items: center;
     gap: max(2vh, 15px);
+    margin-bottom: 20px;
+}
+
+#CandidateForm {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: max(2vh, 15px);
+    margin-bottom: 20px;
+    margin-top: 20px;
+}
+
+#id_resumes {
+    font-size: max(2vh, 12px);
+    width: max(13vh, 210px);
+}
+
+#id_name {
+    width: max(13vh, 210px);
+    font-size: max(2vh, 12px);
+}
+
+#id_opening {
+    width: max(13vh, 210px);
+    font-size: max(2vh, 12px);
+}
+
+select {
+    width: max(13vh, 210px)
+}
+
+#alert {
+    padding: 0 0.25rem;
+    margin-bottom: 0;
 }
