--- a/CandidateCollector/Resume_Collect/templates/Resume_Collect/table.html
+++ b/CandidateCollector/Resume_Collect/templates/Resume_Collect/table.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% if candidates %}
 <div class="card">
     <div id="folder" class="table">
         <table id='table' class="table table-hover">
@@ -51,3 +52,4 @@
         </table>
     </div>
   </div>
+  {% endif %}
