--- a/CandidateCollector/Resume_Collect/templates/Resume_Collect/Collection.html
+++ b/CandidateCollector/Resume_Collect/templates/Resume_Collect/Collection.html
@@ -3,6 +3,7 @@
 <html>
     <head>
         <title>Candidate Collection</title>
+        <link href="https://fonts.googleapis.com/css2?family=DM+Sans&display=swap" rel="stylesheet">
         <link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.ico' %}"/>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="{% static '/css/navbar.css' %}">
@@ -16,7 +17,11 @@
         <header>
             {% include 'Resume_Collect/navbar.html' %}
         </header>
-        <space></space>
+        {% if opening_name %}
+        <space><div>{{ opening_name }}</div></space>
+        {% else %}
+        <noneSpace></noneSpace>
+        {% endif %}
         <workbench>
             <side>
                 {% include 'Resume_Collect/buttonGroup.html' %}
