--- a/CandidateCollector/Resume_Collect/static/css/space.css
+++ b/CandidateCollector/Resume_Collect/static/css/space.css
@@ -16,8 +16,8 @@ space {
     animation: pop-in 0.6s ease-out forwards;
     font-family: 'DM Sans', sans-serif;
     text-shadow: 1px 1px 1px black, 0 0 1px black, 0 0 1px darkblue;
-    z-index: 7;
-    justify-content: center;
+    z-index: 5;
+    justify-content: space-between;
     align-items: center;
 }
 
@@ -41,3 +41,8 @@ space div {
     line-height: 0;
     font-size: max(5vh, 24px);
 }
+
+#emptySpace {
+
+}
+
