--- a/CandidateCollector/Resume_Collect/templates/Resume_Collect/table.html
+++ b/CandidateCollector/Resume_Collect/templates/Resume_Collect/table.html
@@ -5,7 +5,7 @@
         <table id='table' class="table table-hover">
             <thead>
             <tr>
-                <th scope="col" style="text-align: center;">&nbsp;&nbsp;#{{ total_candidates }}</th>
+                <th scope="col" style="text-align: center;">&nbsp;&nbsp;{{ total_candidates }}</th>
                 <th scope="col" style="text-align: center;">Name</th>
                 <th scope="col" style="text-align: center;">Email</th>
                 <th scope="col" style="text-align: center;">Phone</th>
@@ -25,7 +25,7 @@
                         <td style="text-decoration: line-through;">&nbsp;</td>
                     {% endif %}
                     {% if candidate.email %}
-                        <td>{{ candidate.email }}</td>
+                        <td id="email">{{ candidate.email }}</td>
                     {% else %}
                         <td style="text-decoration: line-through;">&nbsp;</td>
                     {% endif %}
@@ -45,7 +45,15 @@
                         <td style="text-decoration: line-through;">&nbsp;</td>
                     {% endif %}
                         <td><a class="btn btn-sm btn-info" href="{% url 'Resume' candidate.id %}" style="background-color: #38b6ff !important;"><img id='download' style="width: max(3vh, 12px);" src="{% static 'images/download.svg' %}"></a></td>
-                        <td><a class="btn btn-sm btn-danger" href=""><img id='trash' style="width: max(2.5vh, 12px);" src="{% static 'images/delete.svg' %}"></a></td>
+                        <td>
+                            <form method="POST" action="">
+                                {% csrf_token %}
+                                <button type="submit" class="btn btn-sm btn-danger" name="delete_candidate" value="{{candidate.id}}">
+                                    <img id='trash' style="width: max(2.5vh, 12px);" src="{% static 'images/delete.svg' %}">
+                                </button>
+                            </form>
+                        </td>
+                        
                     </tr>
                 {% endfor %}
             </tbody>
