Add SignUp & LogIn features

--- a/CandidateCollector/Resume_Collect/static/css/Access.css
+++ b/CandidateCollector/Resume_Collect/static/css/Access.css
@@ -1,4 +1,4 @@
-side {
+register {
     height: fit-content;
     display: flex;
     flex-direction: column;
@@ -12,14 +12,13 @@ side {
 .btn-group-vertical {
     min-width: fit-content;
     min-height: 50px;
-    width: 100%;
-    gap: max(2vh, 15px);
+    gap: max(5vh, 25px);
     border-radius: .50rem;
     margin: 15px;
     align-items: center !important;
     background: linear-gradient(315deg, rgba(2, 0, 36, 1) 0%, rgba(9, 9, 121, 1) 0%, #38b6ff 75%);
     box-shadow: rgba(0, 0, 0, 0.5) 5px 15px 25px;
-
+    width: 25vh;
 }
 
 .btn-group-vertical button {
@@ -49,9 +48,9 @@ side {
 }
 
 .btn-secondary {
-    color: #fff;
-    background: transparent;
-    border: 3px solid #ffe538;
+    color: #fff !important;
+    background: transparent !important;
+    border: 3px solid #ffe538 !important;
 }
 
 .btn-group-vertical .btn-secondary:hover {
@@ -128,7 +127,7 @@ side {
     align-items: center;
     gap: max(2vh, 15px);
     margin-bottom: 20px;
-    margin-top: 20px;
+    margin-top: 30px;
 }
 
 #SearchForm {
@@ -149,10 +148,6 @@ side {
 #id_name {
     width: max(28vh, 210px);
     font-size: max(2vh, 12px);
-    border-bottom-right-radius: .3rem;
-    border-bottom-left-radius: .3rem;
-    border-top-left-radius: .3rem;
-    border-top-right-radius: .3rem;
 }
 
 #id_opening {
@@ -171,9 +166,106 @@ select {
 
 #id_query {
     width: max(28vh, 210px);
-    font-size: max(2vh, 12px);
+    font-size: max(2vh, 12px); 
+}
+
+#UserCreationForm {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: max(2vh, 15px);
+    margin-bottom: 20px;
+    margin-top: 20px;
+}
+
+.signup_label {
+    color: white;
+}
+
+input {
     border-bottom-right-radius: .3rem;
     border-bottom-left-radius: .3rem;
     border-top-left-radius: .3rem;
     border-top-right-radius: .3rem;
+}
+
+/* imported CSS */
+
+
+.user_card {
+    width: 100%;
+    margin-top: auto;
+    margin-bottom: auto;
+    background: transparent;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    padding: 10px;
+    border-bottom-right-radius: .3rem;
+    border-bottom-left-radius: .3rem;
+    border-top-left-radius: .3rem;
+    border-top-right-radius: .3rem;
+}
+
+.form_container {
+    margin-top: 20px;
+}
+
+#form-title{
+    color: #fff;
+    margin-bottom: 0 !important;
+    font-weight: 400;
+    
+}
+.login_btn {
+    width: 100%;
+    background: transparent !important;
+    color: white !important;
+    border: 3px solid #ffe538 !important;
+}
+.login_btn:hover {
+    background-color: #ffe538 !important;
+    border-color: #fff !important;
+    color: #38b6ff !important;
+}
+.login_btn:focus {
+    box-shadow: none !important;
+    outline: 0px !important;
+}
+.login_container {
+    padding: 0 2rem;
+}
+
+.input-group-text {
+    background: transparent !important;
+    color: white !important;
+    border: 0.0625px solid #ffe538 !important;
+
+    border-bottom-left-radius: .3rem !important;
+    border-top-left-radius: .3rem !important;
+
+}
+.input_user,
+.input_pass:focus {
+    box-shadow: none !important;
+    outline: 0px !important;
+}
+
+span .input-group-text {
+    border-bottom-right-radius: 0 !important;
+    border-top-right-radius: 0 !important;
+}
+
+.mt-4 {
+    color:#fff !important;
+}
+
+.ml-2 {
+    color:#fff !important;
+}
+
+a.ml-2:hover {
+    color:#ffe538 !important;
+    text-decoration-color: #fff !important; 
 }
