--- a/CandidateCollector/Resume_Collect/templates/Resume_Collect/table.html
+++ b/CandidateCollector/Resume_Collect/templates/Resume_Collect/table.html
@@ -1,6 +1,9 @@
 {% load static %}
 {% if candidates %}
 <div class="card">
+    {% if query %}
+        Candidates filtered by: "{{ query }}"
+    {% endif %}
     <div id="folder" class="table">
         <table id='table' class="table table-hover">
             <thead>
@@ -10,7 +13,7 @@
                 <th scope="col" style="text-align: center;">Email</th>
                 <th scope="col" style="text-align: center;">Phone</th>
                 <th scope="col" style="text-align: center;">Education</th>
-                <th scope="col" style="text-align: center;">Experience</th>
+                <!--<th scope="col" style="text-align: center;">Experience</th>-->
                 <th scope="col" style="text-align: center;">&nbsp;&nbsp;Download&nbsp;&nbsp;</th>
                 <th scope="col" style="text-align: center;">&nbsp;&nbsp;Delete&nbsp;&nbsp;</th>
             </tr>
@@ -39,11 +42,11 @@
                     {% else %}
                         <td style="text-decoration: line-through;">&nbsp;</td>
                     {% endif %}
-                    {% if candidate.experience %}
+                    <!--{% if candidate.experience %}
                         <td>{{ candidate.experience }}</td>
                     {% else %}
                         <td style="text-decoration: line-through;">&nbsp;</td>
-                    {% endif %}
+                    {% endif %}-->
                         <td><a class="btn btn-sm btn-info" href="{% url 'Resume' candidate.id %}" style="background-color: #38b6ff !important;"><img id='download' style="width: max(3vh, 12px);" src="{% static 'images/download.svg' %}"></a></td>
                         <td>
                             <form method="POST" action="">
@@ -60,4 +63,8 @@
         </table>
     </div>
   </div>
+  {% else %}
+    <div class="card" style="white-space: nowrap;">
+        Candidates filtered by: "{{ query }}"
+    </div>
   {% endif %}
