Add table.html changes

--- a/CandidateCollector/Resume_Collect/templates/Resume_Collect/table.html
+++ b/CandidateCollector/Resume_Collect/templates/Resume_Collect/table.html
@@ -1,6 +1,9 @@
 {% load static %}
 {% if candidates %}
 <div class="card">
+    {% if query %}
+        <div id="filter">Candidates filtered by: "{{ query }}"</div>
+    {% endif %}
     <div id="folder" class="table">
         <table id='table' class="table table-hover">
             <thead>
